// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render error 1 1`] = `
<Error
  data={
    Object {
      "message": Object {
        "en": "Текст en message",
        "ru": "Текст ru message",
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "message": Object {
            "en": "Текст en message",
            "ru": "Текст ru message",
          },
        }
      }
      key="title-place"
    />
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "message": Object {
            "en": "Текст en message",
            "ru": "Текст ru message",
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст ru message
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 2 1`] = `
<Error
  data={
    Object {
      "detail": "Текст detail",
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "detail": "Текст detail",
        }
      }
      key="title-place"
    />
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "detail": "Текст detail",
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст detail
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 3 1`] = `
<Error
  data={
    Object {
      "message": Object {
        "en": "Текст en message",
        "ru": "Текст ru message",
      },
      "title": Object {
        "en": "Текст en title",
        "ru": "Текст ru title",
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "message": Object {
            "en": "Текст en message",
            "ru": "Текст ru message",
          },
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
      key="title-place"
    >
      <div
        className="Error-Title Error-Title_0_E Error-Title_1_r Error-Title_2_r Error-Title_3_o Error-Title_4_r Error-Title_5_- Error-Title_6_T Error-Title_7_i Error-Title_8_t Error-Title_9_l Error-Title_10_e Error-Title_11_P Error-Title_12_l Error-Title_13_a Error-Title_14_c Error-Title_15_e"
      >
        Текст ru title
      </div>
    </TitlePlace>
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "message": Object {
            "en": "Текст en message",
            "ru": "Текст ru message",
          },
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст ru message
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 4 1`] = `
<Error
  data={
    Object {
      "detail": "Текст detail",
      "title": Object {
        "en": "Текст en title",
        "ru": "Текст ru title",
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "detail": "Текст detail",
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
      key="title-place"
    >
      <div
        className="Error-Title Error-Title_0_E Error-Title_1_r Error-Title_2_r Error-Title_3_o Error-Title_4_r Error-Title_5_- Error-Title_6_T Error-Title_7_i Error-Title_8_t Error-Title_9_l Error-Title_10_e Error-Title_11_P Error-Title_12_l Error-Title_13_a Error-Title_14_c Error-Title_15_e"
      >
        Текст ru title
      </div>
    </TitlePlace>
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "detail": "Текст detail",
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст detail
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 5 1`] = `
<Error
  data={
    Object {
      "code": "validation_error",
      "detail": "Текст detail",
      "extra": Object {
        "__all__": Array [
          "Такое себе",
        ],
        "foo": Array [
          "Раз",
          "Два",
        ],
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "code": "validation_error",
          "detail": "Текст detail",
          "extra": Object {
            "__all__": Array [
              "Такое себе",
            ],
            "foo": Array [
              "Раз",
              "Два",
            ],
          },
        }
      }
      key="title-place"
    />
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "validation_error",
          "detail": "Текст detail",
          "extra": Object {
            "__all__": Array [
              "Такое себе",
            ],
            "foo": Array [
              "Раз",
              "Два",
            ],
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст detail
      </div>
    </MessagePlace>
    <Field
      className="Error-Field"
      key="extra-__all__"
      name="__all__"
      values={
        Array [
          "Такое себе",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Value"
          key="value-0"
        >
          Такое себе
        </div>
      </div>
    </Field>
    <Field
      className="Error-Field"
      key="extra-foo"
      name="foo"
      values={
        Array [
          "Раз",
          "Два",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          foo
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          Раз
        </div>
        <div
          className="Error-Value"
          key="value-1"
        >
          Два
        </div>
      </div>
    </Field>
  </div>
</Error>
`;

exports[`Should render error 6 1`] = `
<Error
  data={
    Object {
      "code": "validation_error",
      "detail": "Текст detail",
      "extra": Object {
        "foo": Array [
          "Раз",
          "Два",
        ],
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "code": "validation_error",
          "detail": "Текст detail",
          "extra": Object {
            "foo": Array [
              "Раз",
              "Два",
            ],
          },
        }
      }
      key="title-place"
    />
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "validation_error",
          "detail": "Текст detail",
          "extra": Object {
            "foo": Array [
              "Раз",
              "Два",
            ],
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст detail
      </div>
    </MessagePlace>
    <Field
      className="Error-Field"
      key="extra-foo"
      name="foo"
      values={
        Array [
          "Раз",
          "Два",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          foo
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          Раз
        </div>
        <div
          className="Error-Value"
          key="value-1"
        >
          Два
        </div>
      </div>
    </Field>
  </div>
</Error>
`;

exports[`Should render error 7 1`] = `
<Error
  data={
    Object {
      "code": "validation_error",
      "detail": "Текст detail",
      "extra": Object {
        "foo": Object {
          "ru": Array [
            "Раз",
            "Два",
          ],
        },
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "code": "validation_error",
          "detail": "Текст detail",
          "extra": Object {
            "foo": Object {
              "ru": Array [
                "Раз",
                "Два",
              ],
            },
          },
        }
      }
      key="title-place"
    />
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "validation_error",
          "detail": "Текст detail",
          "extra": Object {
            "foo": Object {
              "ru": Array [
                "Раз",
                "Два",
              ],
            },
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Текст detail
      </div>
    </MessagePlace>
    <Field
      className="Error-Field"
      key="extra-foo.ru"
      name="foo.ru"
      values={
        Array [
          "Раз",
          "Два",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          foo.ru
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          Раз
        </div>
        <div
          className="Error-Value"
          key="value-1"
        >
          Два
        </div>
      </div>
    </Field>
  </div>
</Error>
`;

exports[`Should render error 8 1`] = `
<Error
  data={
    Object {
      "code": "YAWF_VALIDATION_ERROR",
      "message": "None",
      "params": Object {
        "contacts": Array [
          Object {
            "non_field_errors": Array [
              "Неверное значение контакта 0",
            ],
          },
          Object {},
          Object {
            "non_field_errors": Array [
              "Неверное значение контакта 2",
            ],
          },
        ],
      },
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "code": "YAWF_VALIDATION_ERROR",
          "message": "None",
          "params": Object {
            "contacts": Array [
              Object {
                "non_field_errors": Array [
                  "Неверное значение контакта 0",
                ],
              },
              Object {},
              Object {
                "non_field_errors": Array [
                  "Неверное значение контакта 2",
                ],
              },
            ],
          },
        }
      }
      key="title-place"
    >
      <div
        className="Error-Title Error-Title_0_E Error-Title_1_r Error-Title_2_r Error-Title_3_o Error-Title_4_r Error-Title_5_- Error-Title_6_T Error-Title_7_i Error-Title_8_t Error-Title_9_l Error-Title_10_e Error-Title_11_P Error-Title_12_l Error-Title_13_a Error-Title_14_c Error-Title_15_e"
      >
        YAWF_VALIDATION_ERROR
      </div>
    </TitlePlace>
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "YAWF_VALIDATION_ERROR",
          "message": "None",
          "params": Object {
            "contacts": Array [
              Object {
                "non_field_errors": Array [
                  "Неверное значение контакта 0",
                ],
              },
              Object {},
              Object {
                "non_field_errors": Array [
                  "Неверное значение контакта 2",
                ],
              },
            ],
          },
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        None
      </div>
    </MessagePlace>
    <Field
      className="Error-Field"
      key="params-contacts.0.non_field_errors"
      name="contacts.0.non_field_errors"
      values={
        Array [
          "Неверное значение контакта 0",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          contacts.0.non_field_errors
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          Неверное значение контакта 0
        </div>
      </div>
    </Field>
    <Field
      className="Error-Field"
      key="params-contacts.2.non_field_errors"
      name="contacts.2.non_field_errors"
      values={
        Array [
          "Неверное значение контакта 2",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          contacts.2.non_field_errors
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          Неверное значение контакта 2
        </div>
      </div>
    </Field>
  </div>
</Error>
`;

exports[`Should render error 9 1`] = `
<Error
  data={
    Object {
      "message": "String message",
      "title": "String title",
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "message": "String message",
          "title": "String title",
        }
      }
      key="title-place"
    >
      <div
        className="Error-Title Error-Title_0_E Error-Title_1_r Error-Title_2_r Error-Title_3_o Error-Title_4_r Error-Title_5_- Error-Title_6_T Error-Title_7_i Error-Title_8_t Error-Title_9_l Error-Title_10_e Error-Title_11_P Error-Title_12_l Error-Title_13_a Error-Title_14_c Error-Title_15_e"
      >
        String title
      </div>
    </TitlePlace>
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "message": "String message",
          "title": "String title",
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        String message
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 10 1`] = `
<Error
  data={
    Object {
      "code": "error",
      "detail": "Произошла ошибка сервера.",
      "extra": Object {
        "path": Array [
          "Узел в дереве ролей не найден",
        ],
      },
      "message": "Invalid data sent",
      "title": "Ошибка IDM",
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "code": "error",
          "detail": "Произошла ошибка сервера.",
          "extra": Object {
            "path": Array [
              "Узел в дереве ролей не найден",
            ],
          },
          "message": "Invalid data sent",
          "title": "Ошибка IDM",
        }
      }
      key="title-place"
    >
      <div
        className="Error-Title Error-Title_0_E Error-Title_1_r Error-Title_2_r Error-Title_3_o Error-Title_4_r Error-Title_5_- Error-Title_6_T Error-Title_7_i Error-Title_8_t Error-Title_9_l Error-Title_10_e Error-Title_11_P Error-Title_12_l Error-Title_13_a Error-Title_14_c Error-Title_15_e"
      >
        Ошибка IDM
      </div>
    </TitlePlace>
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "error",
          "detail": "Произошла ошибка сервера.",
          "extra": Object {
            "path": Array [
              "Узел в дереве ролей не найден",
            ],
          },
          "message": "Invalid data sent",
          "title": "Ошибка IDM",
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        Invalid data sent
      </div>
    </MessagePlace>
    <Field
      className="Error-Field"
      key="extra-path"
      name="path"
      values={
        Array [
          "Узел в дереве ролей не найден",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          path
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          Узел в дереве ролей не найден
        </div>
      </div>
    </Field>
  </div>
</Error>
`;

exports[`Should render error 11 1`] = `
<Error
  data={
    Object {
      "code": "integration-error",
      "detail": "IDM did not fulfil the request.",
      "extra": Object {
        "errors": null,
        "message": "IDM is in a read-only state, cannot handle write intending request",
        "raw": "{\\"error_code\\": \\"READONLY_STATE\\", \\"message\\": \\"IDM is in a read-only state, cannot handle write intending request\\"}",
      },
      "message": "",
    }
  }
>
  <div
    className="Error"
  >
    <TitlePlace
      className="Error-TitlePlace"
      data={
        Object {
          "code": "integration-error",
          "detail": "IDM did not fulfil the request.",
          "extra": Object {
            "errors": null,
            "message": "IDM is in a read-only state, cannot handle write intending request",
            "raw": "{\\"error_code\\": \\"READONLY_STATE\\", \\"message\\": \\"IDM is in a read-only state, cannot handle write intending request\\"}",
          },
          "message": "",
        }
      }
      key="title-place"
    />
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "integration-error",
          "detail": "IDM did not fulfil the request.",
          "extra": Object {
            "errors": null,
            "message": "IDM is in a read-only state, cannot handle write intending request",
            "raw": "{\\"error_code\\": \\"READONLY_STATE\\", \\"message\\": \\"IDM is in a read-only state, cannot handle write intending request\\"}",
          },
          "message": "",
        }
      }
      key="message-place"
      type="abc"
    >
      <div
        className="Error-MessagePlace"
      >
        i18n:integration-error
      </div>
    </MessagePlace>
    <Field
      className="Error-Field"
      key="extra-errors"
      name="errors"
      values={
        Array [
          "null",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          errors
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          null
        </div>
      </div>
    </Field>
    <Field
      className="Error-Field"
      key="extra-message"
      name="message"
      values={
        Array [
          "IDM is in a read-only state, cannot handle write intending request",
        ]
      }
    >
      <div
        className="Error-Field"
      >
        <div
          className="Error-Title"
          key="title"
        >
          message
        </div>
        <div
          className="Error-Value"
          key="value-0"
        >
          IDM is in a read-only state, cannot handle write intending request
        </div>
      </div>
    </Field>
  </div>
</Error>
`;

exports[`Should render error 12: dispenser error with data object 1`] = `
<Error
  data={
    Object {
      "code": "integration-error",
      "description": "Dispenser is in a read-only state, cannot handle write intending request",
      "detail": "Dispenser did not fulfil the request.",
      "message": "",
    }
  }
  type="dispenser"
>
  <div
    className="Error"
  >
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "integration-error",
          "description": "Dispenser is in a read-only state, cannot handle write intending request",
          "detail": "Dispenser did not fulfil the request.",
          "message": "",
        }
      }
      key="message-place"
      type="dispenser"
    >
      <div
        className="Error-MessagePlace"
      >
        Dispenser is in a read-only state, cannot handle write intending request
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 13: dispenser error with string data 1`] = `
<Error
  data="Dispenser is in a read-only state, cannot handle write intending request"
  type="dispenser"
>
  <div
    className="Error"
  >
    <MessagePlace
      className="Error-MessagePlace"
      data="Dispenser is in a read-only state, cannot handle write intending request"
      key="message-place"
      type="dispenser"
    >
      <div
        className="Error-MessagePlace"
      >
        Dispenser is in a read-only state, cannot handle write intending request
      </div>
    </MessagePlace>
  </div>
</Error>
`;

exports[`Should render error 14 1`] = `
<Error
  data={
    Object {
      "code": "integration-error",
      "description": "IDM is in a read-only state, cannot handle write intending request",
      "detail": "IDM did not fulfil the request.",
      "message": "",
    }
  }
  type="dispenser"
>
  <div
    className="Error"
  >
    <MessagePlace
      className="Error-MessagePlace"
      data={
        Object {
          "code": "integration-error",
          "description": "IDM is in a read-only state, cannot handle write intending request",
          "detail": "IDM did not fulfil the request.",
          "message": "",
        }
      }
      key="message-place"
      type="dispenser"
    >
      <div
        className="Error-MessagePlace"
      >
        IDM is in a read-only state, cannot handle write intending request
      </div>
    </MessagePlace>
  </div>
</Error>
`;
